# hs-uploader

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
docs/: PER-SITE-SETUP.md  REQUIREMENTS.md  pipelines.toml.example
src/hs_uploader/: __init__.py  cli.py  config.py  core.py  daemon.py  pipeline_factory.py  schema.py  wake.py
src/hs_uploader/payload/: __init__.py  psk_pskr.py
src/hs_uploader/sources/: __init__.py  base.py  clickhouse.py  files.py  sqlite.py  wspr_completion.py  wspr_cycle.py
src/hs_uploader/transports/: __init__.py  base.py  pskreporter.py  psws_magnetometer.py  wsprdaemon.py  wsprnet.py
src/hs_uploader/watermark/: __init__.py  base.py  sqlite.py
systemd/: hs-uploader.service
tests/: conftest.py  test_cli.py  test_clickhouse_source.py  test_config.py  test_core_orchestration.py  test_daemon.py  test_file_source.py  test_payload_psk_pskr.py  test_pipeline_factory.py  test_schema_registry.py  test_sqlite_source.py  test_transport_pskreporter_tcp.py  test_transport_psws_magnetometer.py  test_transport_wsprdaemon.py  test_transport_wsprnet.py  test_watermark_sqlite.py  test_wspr_completion.py
tmpfiles.d/: hs-uploader.conf
