[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hs-uploader"
version = "0.1.0"
description = "Library for shipping HamSCI sigmond observations to HF reporting destinations."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "mjh@hauan.org"},
]
keywords = ["hamsci", "sigmond", "wspr", "psk", "hfdl", "psws", "ham-radio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
psws        = []
wsprnet     = []
wsprdaemon  = []
pskreporter = []
http        = ["httpx>=0.27"]
dev = [
    "pytest>=7.0",
    "pytest-httpserver>=1.0",
]

[project.scripts]
hs-uploader = "hs_uploader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
